Modified the weapon class and the monster class specifically so that when the Swordmaster encounters any monster, a set chance of obtaining a certain rarity weapon will occur and be added to the inventory.